global form twig theme

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -28,7 +28,9 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
-
+    form:
+        resources:
+            - 'BtnAppBundle:Form:fields.html.twig'
 # Assetic Configuration
 assetic:
     debug:          "%kernel.debug%"
